packagekit: Don't mark to add packages that are already there

This was a regression from c0dd9fa73744bb2ad02af6daa60c0e5ec230c16a.

BUG: 473613